--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="call_hold_label">保持通话：</string>
     <string name="call_resume_label">恢复通话：</string>
-    <string name="device_is_hd_capable">SIM %1$d支持高清</string>
+    <string name="device_is_hd_capable" />
     <string name="device_is_volte_capable">SIM %1$d支持高清</string>
     <string name="error_msg_cancelled">" 已取消"</string>
     <string name="error_msg_failed">" 已失败"</string>
