--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="call_hold_label">Call hold :</string>
     <string name="call_resume_label">Call Resume :</string>
-    <string name="device_is_hd_capable">SIM %1$d is HD capable</string>
+    <string name="device_is_hd_capable" />
     <string name="device_is_volte_capable">SIM %1$d is VOLTE capable</string>
     <string name="error_msg_cancelled">Cancelled</string>
     <string name="error_msg_failed">Failed</string>
